added plot in index.html and some styles in styles.css and scaffolds.css

--- a/app/views/vegetables/index.html.erb
+++ b/app/views/vegetables/index.html.erb
@@ -1,33 +1,225 @@
-<h1>Listing vegetables</h1>
+<section class="group">
+  <ol class="group">
+    <li class="plot*">
+      <select name="1A">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="1B">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="1C">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="1D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+  </ol>
+  <ol class="group">
+    <li class="plot">
+      <select name="2A">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="2B">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="2C">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="2D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+  </ol>
+  <ol class="group">
+    <li class="plot">
+      <select name="3A">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="3B">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="3C">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="3D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+  </ol>
+  <ol class="group">
+    <li class="plot">
+       <select name="1D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="2D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="3D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+    <li class="plot">
+      <select name="4D">
+        <option value="Null" selected>Select</option>
+        <option value="Beans">Beans</option>
+        <option value="Chives">Chives</option>
+        <option value="Dill">Dill</option>
+        <option value="Marigolds">Marigolds</option>
+        <option value="Onions">Onions</option>
+        <option value="Potatoes">Potatoes</option>
+        <option value="Strawberry">Strawberry</option>
+        <option value="Tomatoes">Tomatoes</option>
+      </select>
+    </li>
+  </ol>
 
-<table>
-  <tr>
-    <th>Beans</th>
-    <th>Onion</th>
-    <th>Potato</th>
-    <th>Chive</th>
-    <th>Tomato</th>
-    <th>Dill</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<input class="evaluate_btn" type="submit" name="evaluate" value="Evaluate">
 
-<% @vegetables.each do |vegetable| %>
-  <tr>
-    <td><%= vegetable.beans %></td>
-    <td><%= vegetable.onion %></td>
-    <td><%= vegetable.potato %></td>
-    <td><%= vegetable.chive %></td>
-    <td><%= vegetable.tomato %></td>
-    <td><%= vegetable.dill %></td>
-    <td><%= link_to 'Show', vegetable %></td>
-    <td><%= link_to 'Edit', edit_vegetable_path(vegetable) %></td>
-    <td><%= link_to 'Destroy', vegetable, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+</section>
 
-<br />
+
 
 
