--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,15 +1,29 @@
+/*box sizing*/
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+       -o-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
-  background-color: #fff;
+  // background-color: #333;
+  background-image: url("assets/grass.jpg");
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  height: 100%;
+  margin: 0 auto;
 }
+
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  padding: 0;
+  margin: 0;
 }
 
 pre {
@@ -35,35 +49,34 @@ div {
   }
 }
 
-#notice {
-  color: green;
+
+li {
+  list-style: none;
 }
 
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
+ul ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+section {
+  margin: 10%;
+}
+
+.group:after,
+.group:before {
   display: table;
+  content: "";
 }
 
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
-  }
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
+.group:after {
+  clear: both;
 }
+
+.group {
+  *zoom: 1;
+}
+
+
+
