--- a/app/views/vegetables/index.html.erb
+++ b/app/views/vegetables/index.html.erb
@@ -1,6 +1,6 @@
 <section class="group">
   <ol class="group">
-    <li class="plot*">
+    <li class="plot">
       <select name="1A">
         <option value="Null" selected>Select</option>
         <option value="Beans">Beans</option>
